--- a/statement.cabal
+++ b/statement.cabal
@@ -13,7 +13,6 @@ author:         Author name here
 maintainer:     example@example.com
 copyright:      2022 Author name here
 license:        BSD3
-license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
@@ -25,13 +24,23 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Converter.PDFToCSV
   other-modules:
       Paths_statement
   hs-source-dirs:
       src
+  default-extensions:
+      OverloadedStrings
+      ExtendedDefaultRules
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , cassava
+    , process
+    , safe-money
+    , shelly
+    , text
+    , time
   default-language: Haskell2010
 
 executable statement-exe
@@ -40,10 +49,20 @@ executable statement-exe
       Paths_statement
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-extensions:
+      OverloadedStrings
+      ExtendedDefaultRules
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fno-warn-type-defaults
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , cassava
+    , process
+    , safe-money
+    , shelly
     , statement
+    , text
+    , time
   default-language: Haskell2010
 
 test-suite statement-test
@@ -53,8 +72,18 @@ test-suite statement-test
       Paths_statement
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-extensions:
+      OverloadedStrings
+      ExtendedDefaultRules
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fno-warn-type-defaults
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , cassava
+    , process
+    , safe-money
+    , shelly
     , statement
+    , text
+    , time
   default-language: Haskell2010
